<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_marginTop="30dp"
            android:fontFamily="@font/product_sans"
            android:textSize="25sp"
            android:text="SDGateway"
            android:textStyle="bold"
            android:textColor="#1428BF"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <ImageView
            android:src="@drawable/email"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:fontFamily="@font/product_sans"
            android:textSize="25sp"
            android:textColor="#F21428BF"
            android:text="Create an account"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:text="@string/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:inputType="phone"
            android:singleLine="true"
            android:id="@+id/userPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:text="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/userPassword"
            android:singleLine="true"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/userConfirmPassword"
            android:singleLine="true"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <Button
            android:layout_marginTop="15dp"
            android:id="@+id/btnSignUp"
            android:text="@string/sign_up"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_bg_2"
            android:textSize="16sp"
            android:radius="10dp"
            android:fontFamily="@font/product_sans"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>





    </LinearLayout>


</RelativeLayout>